--- a/Test/Readme
+++ b/Test/Readme
@@ -1,1 +1,2 @@
-Test of my web project, which includes my own test cases as well as the automated performance test.
+Test of my web project, which includes my own test cases(which is shown on the file Test Case Sheet_firebase.xlsx)
+as well as the automated performance test in Monkey Test(which is shown on MonkeyTest.png).
